2007-04-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: documented bugs fixed in ldl
	* src/drivers/ldl.c: fixed MKDEV bug in ldl and added missing MODULE_ALIAS's

2007-03-30  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man7/npi_ip.7.man: documentation corrections

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/cd.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl2.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dl_ip.c: support for 2.6.20-1.2307.fc5
	* src/drivers/dlp.c: support for 2.6.20-1.2307.fc5
	* src/drivers/hdlc.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ip.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ip_to_dlpi.c: support for 2.6.20-1.2307.fc5
	* src/drivers/ldl.c: support for 2.6.20-1.2307.fc5
	* src/drivers/np.c: support for 2.6.20-1.2307.fc5
	* src/drivers/np_ip.c: support for 2.6.20-1.2307.fc5
	* src/modules/cdi_conv.c: support for 2.6.20-1.2307.fc5
	* src/modules/dlpi_conv.c: support for 2.6.20-1.2307.fc5
	* src/modules/ip_strm_mod.c: support for 2.6.20-1.2307.fc5
	* src/modules/npi_conv.c: support for 2.6.20-1.2307.fc5

	* src/drivers/ip_to_dlpi.c: flush corrections
	* src/drivers/ldl.c: flush corrections
	* src/drivers/np_ip.c: flush corrections
	* src/modules/ip_strm_mod.c: flush corrections

	* src/modules/ip_strm_mod.c: add D_MTPERQ flag
	* src/drivers/ip_to_dlpi.c: add D_MTPERQ flag
	* src/drivers/ldl.c: add D_MTPERQ flag

	* src/drivers/cd.c: register qlock option
	* src/drivers/dl.c: register qlock option
	* src/drivers/dlp.c: register qlock option
	* src/drivers/ip.c: register qlock option
	* src/drivers/np.c: register qlock option
	* src/drivers/np_ip.c: register qlock option

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date
	* src/test/test-ip.c: report failed expectations